--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,6 @@ include ':app'
 include ':core'
 include ':styling'
 include ':shared'
+include ':feature:splashscreen'
+include ':feature:home'
+include ':feature:login'
