--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,5 @@ include ':shared'
 include ':feature:splashscreen'
 include ':feature:home'
 include ':feature:login'
+include ':registration'
+include ':feature:registration'
