feat: home, movielist

--- a/feature/home/src/main/AndroidManifest.xml
+++ b/feature/home/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <application>
         <activity
-            android:name=".presentation.ui.HomeActivity"
+            android:theme="@style/MyFlix.NoActionBar"
+            android:name=".presentation.ui.home.HomeActivity"
             android:exported="false" />
     </application>
 
